--- a/index.html
+++ b/index.html
@@ -4,171 +4,172 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>sunday.bakeday</title>
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Fredoka+One&family=Open+Sans&display=swap" rel="stylesheet">
 		<style>
-		html, body {
-			line-height: 1.3;
-			background-color: #fed101;
-			color: #FFF;
-			font-family: 'Fredoka One', sans-serif;
-			}
-		a {
-			color: #FFF;
-			text-decoration: underline;
-			}
-		a:hover {
-			text-decoration: none;
-			color: #003adf;
-			}
-		h1 a {
-			text-decoration: none;
-			}
-		.pill a:hover {
-			color: #fff;
-			}
-		h1 {
-			font-size: 2.4rem;
-			}
-		h2 {
-			font-size: 2rem;
-			}
-		@media (min-width: 992px) { 
+			html, body {
+				line-height: 1.3;
+				background-color: #fed101;
+				color: #FFF;
+				font-family: 'Fredoka One', sans-serif;
+				}
+			a {
+				color: #FFF;
+				text-decoration: underline;
+				}
+			a:hover {
+				text-decoration: none;
+				color: #003adf;
+				}
+			h1 a {
+				text-decoration: none;
+				}
+			.pill a:hover {
+				color: #fff;
+				}
 			h1 {
-				font-size: 5rem;
+				font-size: 2.4rem;
 				}
 			h2 {
+				font-size: 2rem;
+				}
+			@media (min-width: 992px) { 
+				h1 {
+					font-size: 5rem;
+					}
+				h2 {
+					font-size: 3.5rem;
+					}
+				.logo {
+					width: 180px;
+					height: 180px;
+					}
+				}
+				
+			.bd-placeholder-img {
+				font-size: 1.125rem;
+				text-anchor: middle;
+				-webkit-user-select: none;
+				-moz-user-select: none;
+				user-select: none;
+				} 
+			.top {
+				width: 100%;
+				margin: auto;
+				background: #FC01F3;
+				padding-bottom: 20px;
+				margin-bottom: 20px;
+				}
+
+			h2.thisweeksmenu {
+				color: #FC01F3;
+				position: relative;
+				top: -15px;
+				}
+
+			.bd-placeholder-img-lg {
 				font-size: 3.5rem;
 				}
-			.logo {
-				width: 180px;
-				height: 180px;
-				}
-			}
-			
-		.bd-placeholder-img {
-			font-size: 1.125rem;
-			text-anchor: middle;
-			-webkit-user-select: none;
-			-moz-user-select: none;
-			user-select: none;
-			} 
-		.top {
-			width: 100%;
-			margin: auto;
-			background: #FC01F3;
-			padding-bottom: 20px;
-			margin-bottom: 20px;
-			}
-
-		h2.thisweeksmenu {
-			color: #FC01F3;
-			position: relative;
-			top: -15px;
-			}
-
-		.bd-placeholder-img-lg {
-			font-size: 3.5rem;
-			}
-		.top {
-			background-image: linear-gradient(178deg, #FC01F3 85%, #fed101 calc(85% + 2px));
-			padding-bottom: 75px;
-			margin-bottom: 0;
-			}
-		.card-body h2 {
-			font-size: 1rem;
-			color: #fff;
-			}
-		.card-text {
-			font-size: 1rem;
-			color: #fff;
-			font-family: 'Open Sans', sans-serif;
-			}
-
-		@media (max-width: 991.98px) { 
-			.card-text {
-				font-size: 1.2rem;
-				}
-			.bottom {
-				background-image: linear-gradient(182deg, #fed101 10%, #5a3791 calc(10% + 2px));
+			.top {
+				background-image: linear-gradient(178deg, #FC01F3 85%, #fed101 calc(85% + 2px));
+				padding-bottom: 75px;
+				margin-bottom: 0;
 				}
 			.card-body h2 {
-				font-size: 1.4rem;
+				font-size: 1rem;
+				color: #fff;
 				}
-			}
+			.card-text {
+				font-size: 1rem;
+				color: #fff;
+				font-family: 'Open Sans', sans-serif;
+				}
+
+			@media (max-width: 991.98px) { 
+				.card-text {
+					font-size: 1.2rem;
+					}
+				.bottom {
+					background-image: linear-gradient(182deg, #fed101 10%, #5a3791 calc(10% + 2px));
+					}
+				.card-body h2 {
+					font-size: 1.4rem;
+					}
+				}
 
 
-		.card-body {
-			background-color: #FC01F3;
-			border-radius: 0;
-			}
+			.card-body {
+				background-color: #FC01F3;
+				border-radius: 0;
+				}
 
-		.howitworks {
-			font-size: 1.2rem;
-			}
-		.card {
-			margin-bottom: 1rem;
-			min-height: 372px;
-			border: none;
-			border-radius: 0;
-			}
-		h2 {
-			color: #fed101;
-			}
-		.faqs h2 {
-			color: #FC01F3;
-			}
-		ol {
-			list-style-position: inside;
-			padding-left: 0;
-			color: #fed101;
-			}
-		ol span {
-			color: #FFF;
-			}
-		.lead {
-			font-size: 1.2rem;
-			}
-		.yellowline {
-			background: #fed101;
-			min-height: 5px;
-			border-radius: 3px;
-			}
-		.pill {
-			font-size: 14px;
-			padding: 5px 0;
-			color: #fff;
-			font-family: 'Open Sans', sans-serif;
-			border: 3px solid #FFF;
-			border-radius: 40px;
-			}
-		.faqs p, .contact p {
-			font-size: 1.2rem;
-			}
-		.faqs p {
-			color: #fed101;
-			}
-		.answer, .note {
-			font-family: 'Open Sans', sans-serif;
-			}
-		.note {
-			display: block;
-			font-size: 1rem;
-			font-style: italic;
-			}
-		.pillTitle {
-			font-size: 1rem;
-			font-family: 'Fredoka One', sans-serif;
-			}
-		.bottomWrapper {
-			/*background: URL('https://i.imgur.com/BtDWgyy.jpg');
-			background-size: cover;
-			text-shadow: 0 0 2px #a4009e;*/
-			background-image: linear-gradient(182deg, #fed101 4%, #5a3791 calc(4% + 2px));
-			}
+			.howitworks {
+				font-size: 1.2rem;
+				}
+			.card {
+				margin-bottom: 1rem;
+				min-height: 372px;
+				border: none;
+				border-radius: 0;
+				}
+			h2 {
+				color: #fed101;
+				}
+			.faqs h2 {
+				color: #FC01F3;
+				}
+			ol {
+				list-style-position: inside;
+				padding-left: 0;
+				color: #fed101;
+				}
+			ol span {
+				color: #FFF;
+				}
+			.lead {
+				font-size: 1.2rem;
+				}
+			.yellowline {
+				background: #fed101;
+				min-height: 5px;
+				border-radius: 3px;
+				}
+			.pill {
+				font-size: 14px;
+				padding: 5px 0;
+				color: #fff;
+				font-family: 'Open Sans', sans-serif;
+				border: 3px solid #FFF;
+				border-radius: 40px;
+				}
+			.faqs p, .contact p {
+				font-size: 1.2rem;
+				}
+			.faqs p {
+				color: #fed101;
+				}
+			.answer, .note {
+				font-family: 'Open Sans', sans-serif;
+				}
+			.note {
+				display: block;
+				font-size: 1rem;
+				font-style: italic;
+				}
+			.pillTitle {
+				font-size: 1rem;
+				font-family: 'Fredoka One', sans-serif;
+				}
+			.bottomWrapper {
+				/*background: URL('https://i.imgur.com/BtDWgyy.jpg');
+				background-size: cover;
+				text-shadow: 0 0 2px #a4009e;*/
+				background-image: linear-gradient(182deg, #fed101 4%, #5a3791 calc(4% + 2px));
+				}
 		</style>
 	</head>
 	<body>
