--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
 				height: 250px;
 				object-fit: cover;
 				}
+			.card-body h2 {
+				font-size: 1.4rem;
+				color: #fff;
+				}
 			@media (min-width: 992px) { 
 				h1 {
 					font-size: 5rem;
@@ -57,8 +61,11 @@
 				.card img {
 						background: #FFF;
 						border-radius: 10px 10px 0 0;
-						margin: 15px auto 5px;
+						margin: 0 auto 5px;
 						height: auto;
+					}
+				.card-body h2 {
+					font-size: 1rem;
 					}
 				}
 				
@@ -112,10 +119,7 @@
 				padding: 1rem;
 				border-radius: 0 0 10px 10px;
 				}
-			.card-body h2 {
-				font-size: 1rem;
-				color: #fff;
-				}
+
 			.card-text {
 				font-size: 1rem;
 
