--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 				border-radius: 10px 10px 0 0;
 				height: 250px;
 				object-fit: cover;
+				margin-bottom: 5px;
 				}
 			.card-body h2 {
 				font-size: 1.4rem;
