--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 				}
 			h2 {
 				font-size: 2rem;
+				color: #fed101;
 				}
 			.card img {
 				border-radius: 10px 10px 0 0;
@@ -121,20 +122,12 @@
 				color: #fff;
 				padding: 1rem;
 				transform: rotate(0deg);
+				border-radius: 15px;
 				}
-			.card-body2 {
-				transform: rotate(0deg);
-				}
-			.card-body4 {
-				transform: rotate(0deg);
-				}
-
 			.card-text {
 				font-size: 1rem;
-
 				font-family: 'Open Sans', sans-serif;
 				}
-
 			.howitworks {
 				font-size: 1.2rem;
 				}
@@ -142,9 +135,6 @@
 				border: none;
 				margin-bottom: 1rem;
 				background-color: transparent;
-				}
-			h2 {
-				color: #fed101;
 				}
 			.faqs h2 {
 				color: #FC01F3;
@@ -198,40 +188,40 @@
 				background-image: linear-gradient(182deg, #fed101 6%, #FC01F3 calc(6% + 2px));
 				}
 				
-.fade-in {
-  animation: fadeIn 1s;
-  -webkit-animation: fadeIn 1s;
-  -moz-animation: fadeIn 1s;
-  -o-animation: fadeIn 1s;
-  -ms-animation: fadeIn 1s;
-}
-.album {
-  background-color: #fed101;
-}
-@keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
+			.fade-in {
+			  animation: fadeIn 1s;
+			  -webkit-animation: fadeIn 1s;
+			  -moz-animation: fadeIn 1s;
+			  -o-animation: fadeIn 1s;
+			  -ms-animation: fadeIn 1s;
+			}
+			.album {
+			  background-color: #fed101;
+			}
+			@keyframes fadeIn {
+			  0% {opacity:0;}
+			  100% {opacity:1;}
+			}
 
-@-moz-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
+			@-moz-keyframes fadeIn {
+			  0% {opacity:0;}
+			  100% {opacity:1;}
+			}
 
-@-webkit-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
+			@-webkit-keyframes fadeIn {
+			  0% {opacity:0;}
+			  100% {opacity:1;}
+			}
 
-@-o-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
+			@-o-keyframes fadeIn {
+			  0% {opacity:0;}
+			  100% {opacity:1;}
+			}
 
-@-ms-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
+			@-ms-keyframes fadeIn {
+			  0% {opacity:0;}
+			  100% {opacity:1;}
+			}
 
 		</style>
 	</head>
@@ -247,7 +237,7 @@
 			</div>
 		</div>
 		<div class="album text-center">
-			<h2 class="thisweeksmenu fade-in">current menu</h2>
+			<h2 class="thisweeksmenu fade-in">this week's menu</h2>
 			<div class="container">
 				<div class="row">
 					<div class="col-12 col-md-6 col-lg-3">
@@ -272,7 +262,7 @@
 						<div class="card">
 							<div class="card-body card-body3">
 								<h2>Blueberry scones</h2>
-								<p class="card-text">Welcome to the scone zone. Made with giant organic blueberries.</p>
+								<p class="card-text">Welcome to the scone zone. Made with organic flour and giant organic blueberries.</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
 						</div>
