--- a/index.html
+++ b/index.html
@@ -1,257 +1,6 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>sunday.bakeday</title>
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-		<link rel="stylesheet" src="/css/animate.css" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Fredoka+One&family=Open+Sans&display=swap" rel="stylesheet">
-		<script>
-		console.log("Hello world!");
-		</script>
-		<style>
-			html, body {
-				line-height: 1.3;
 
-				color: #FFF;
-				font-family: 'Fredoka One', sans-serif;
-				}
-			a {
-				color: #FFF;
-				text-decoration: underline;
-				}
-			a:hover {
-				text-decoration: none;
-				color: #003adf;
-				}
-			h1 a {
-				text-decoration: none;
-				}
-			.pill a:hover {
-				color: #fff;
-				}
-			h1 {
-				font-size: 2.4rem;
-				}
-			h2 {
-				font-size: 2rem;
-				color: #fed101;
-				}
-			.card img {
-				border-radius: 10px 10px 0 0;
-				height: 250px;
-				object-fit: cover;
-				margin-bottom: 5px;
-				}
-			.card-body h2 {
-				font-size: 1.4rem;
-				color: #fff;
-				}
-			@media (min-width: 992px) { 
-				h1 {
-					font-size: 5rem;
-					}
-				h2 {
-					font-size: 3.5rem;
-					}
-				.logo {
-					width: 180px;
-					height: 180px;
-					}
-				.card img {
-						border-radius: 10px 10px 0 0;
-						margin: 0 auto 5px;
-						height: auto;
-					}
-				.card-body h2 {
-					font-size: 1rem;
-					}
-				}
-				
-			.bd-placeholder-img {
-				font-size: 1.125rem;
-				text-anchor: middle;
-				-webkit-user-select: none;
-				-moz-user-select: none;
-				user-select: none;
-				} 
-			.top {
-				width: 100%;
-				margin: auto;
-				background: #FC01F3;
-				padding-bottom: 20px;
-				margin-bottom: 20px;
-				}
-
-			h2.thisweeksmenu {
-				color: #FC01F3;
-				position: relative;
-				top: -15px;
-				}
-
-			.bd-placeholder-img-lg {
-				font-size: 3.5rem;
-				}
-			.top {
-				background-image: linear-gradient(178deg, #FC01F3 85%, #fed101 calc(85% + 2px));
-				padding-bottom: 75px;
-				margin-bottom: 0;
-				}
-
-
-			@media (max-width: 991.98px) { 
-				.card-text {
-					font-size: 1.2rem;
-					}
-				.bottom {
-					background-image: linear-gradient(182deg, #fed101 10%, #FC01F3 calc(10% + 2px));
-					}
-				.card-body h2 {
-					font-size: 1.4rem;
-					}
-				}
-
-
-			.card-body {
-				background: #FC01F3;
-				color: #fff;
-				padding: 1rem;
-				transform: rotate(0deg);
-				border-radius: 15px;
-				}
-			.card-text {
-				font-size: 1rem;
-				font-family: 'Open Sans', sans-serif;
-				}
-			.howitworks {
-				font-size: 1.2rem;
-				}
-			.card {
-				border: none;
-				margin-bottom: 1rem;
-				background-color: transparent;
-				}
-			.faqs h2 {
-				color: #FC01F3;
-				}
-			ol {
-				list-style-position: inside;
-				padding-left: 0;
-				color: #fed101;
-				}
-			ol span {
-				color: #FFF;
-				}
-			.lead {
-				font-size: 1.2rem;
-				}
-			.yellowline {
-				background: #fed101;
-				min-height: 5px;
-				border-radius: 3px;
-				}
-			.pill {
-				font-size: 14px;
-				padding: 5px 0;
-				color: #fff;
-				font-family: 'Open Sans', sans-serif;
-				border: 3px solid #FFF;
-				border-radius: 40px;
-				}
-			.faqs p, .contact p {
-				font-size: 1.2rem;
-				}
-			.faqs p {
-				color: #fed101;
-				}
-			.answer, .note {
-				font-family: 'Open Sans', sans-serif;
-				}
-			.note {
-				display: block;
-				font-size: 1rem;
-				font-style: italic;
-				}
-			.pillTitle {
-				font-size: 1rem;
-				font-family: 'Fredoka One', sans-serif;
-				}
-			.bottomWrapper {
-				/*background: URL('https://i.imgur.com/BtDWgyy.jpg');
-				background-size: cover;
-				text-shadow: 0 0 2px #a4009e;*/
-				background-image: linear-gradient(182deg, #fed101 6%, #FC01F3 calc(6% + 2px));
-				}
-				
-			.fade-in {
-			  animation: fadeIn 1s;
-			  -webkit-animation: fadeIn 1s;
-			  -moz-animation: fadeIn 1s;
-			  -o-animation: fadeIn 1s;
-			  -ms-animation: fadeIn 1s;
-			}
-			.album {
-			  background-color: #fed101;
-			}
-			@keyframes fadeIn {
-			  0% {opacity:0;}
-			  100% {opacity:1;}
-			}
-
-			@-moz-keyframes fadeIn {
-			  0% {opacity:0;}
-			  100% {opacity:1;}
-			}
-
-			@-webkit-keyframes fadeIn {
-			  0% {opacity:0;}
-			  100% {opacity:1;}
-			}
-
-			@-o-keyframes fadeIn {
-			  0% {opacity:0;}
-			  100% {opacity:1;}
-			}
-
-			@-ms-keyframes fadeIn {
-			  0% {opacity:0;}
-			  100% {opacity:1;}
-			}
-
-		</style>
-	</head>
-	<body>
-		<div class="top text-center">
-			<div class="px-2 pt-4 fade-in">
-				<a href="https://www.instagram.com/sunday.bakeday/"><img class="logo d-block mx-auto mb-3" src="https://gist.githubusercontent.com/sunday-bakeday/97e4115b5e3d76f1e0feb32f29a1b5c6/raw/6346c00dac4e53267e79a8099e4955bf5c2aa8b7/logo.svg" alt="Sunday Bakeday logo" width="150" height="150"></a>
-				<h1><a href="https://www.instagram.com/sunday.bakeday/">sunday bakeday!</a></h1>
-				<div class="col-lg-6 mx-auto">
-					<p class="lead mb-2 d-none d-sm-block">Fresh-baked pastries delivered on Sunday morning. Mix and match 4 for $20. <br>Grand Rapids, MI.</p>
-					<p class="lead mb-2 d-block d-sm-none">Fresh-baked pastries delivered on Sunday morning. Mix and match 4 for $20. Grand Rapids, MI.</p>
-				</div>
-			</div>
-		</div>
-		<div class="album text-center">
-			<h2 class="thisweeksmenu fade-in">this week's menu</h2>
-			<div class="container">
-				<div class="row">
-					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
-							<div class="card-body  card-body1">
-								<h2>Croissants</h2>
-								<p class="card-text">Everyone loves a croissant! Made with organic flour and really expensive butter. </p>
-								<div class="d-flex justify-content-between align-items-center"></div>
-							</div>
-						</div>
-					</div>
-					<div class="col-12 col-md-6 col-lg-3">
-						<div class="card">
-							<div class="card-body card-body2">
+							<div class="card-body fade-in">
 								<h2>Pains au chocolat</h2>
 								<p class="card-text">What's better than a croissant? A croissant with chocolate inside it!</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
@@ -260,7 +9,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
-							<div class="card-body card-body3">
+							<div class="card-body fade-in">
 								<h2>Blueberry scones</h2>
 								<p class="card-text">Welcome to the scone zone. Made with organic flour and giant organic blueberries.</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
@@ -269,7 +18,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
-							<div class="card-body card-body4">
+							<div class="card-body fade-in">
 								<h2>Jalapeno cheddar scones</h2>
 								<p class="card-text">Made with home-grown jalapenos and imported Scottish cheddar. Really!</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
