--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 			</div>
 		</div>
 		<div class="album text-center">
-			<h2 class="thisweeksmenu">this week's menu</h2>
+			<h2 class="thisweeksmenu fade-in">this week's menu</h2>
 			<div class="container">
 				<div class="row ">
 					<div class="col-12 col-md-6 col-lg-3">
