--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 		<div class="top text-center">
 			<div class="px-2 pt-4 fade-in">
 				<a href="https://www.instagram.com/sunday.bakeday/"><img class="logo d-block mx-auto mb-3" src="https://gist.githubusercontent.com/sunday-bakeday/97e4115b5e3d76f1e0feb32f29a1b5c6/raw/6346c00dac4e53267e79a8099e4955bf5c2aa8b7/logo.svg" alt="Sunday Bakeday logo" width="150" height="150"></a>
-				<h1><a href="https://www.instagram.com/sunday.bakeday/">sunday bakeday</a></h1>
+				<h1>sunday bakeday</h1>
 				<div class="col-lg-6 mx-auto">
 					<p class="lead mb-2 d-none d-sm-block">Fresh-baked pastries delivered on Sunday morning. Mix and match 4 for $20. <br>Grand Rapids, MI.</p>
 					<p class="lead mb-2 d-block d-sm-none">Fresh-baked pastries delivered on Sunday morning. Mix and match 4 for $20. Grand Rapids, MI.</p>
