--- a/index.html
+++ b/index.html
@@ -164,6 +164,14 @@
 				font-family: 'Open Sans', sans-serif;
 				border: 3px solid #FFF;
 				border-radius: 40px;
+				background: #FFF;
+				}
+			.pill a {
+				color: #FC01F3;
+				}
+			.pill a:hover {
+				color: #FC01F3;
+				text-decoration: none;
 				}
 			.faqs p, .contact p {
 				font-size: 1.2rem;
@@ -330,7 +338,7 @@
 								</div>
 							</div>							
 						</div>
-						<p class="mb-0 pt-3">You can also pay with cold hard cash! Just <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">email me</a> and we'll figure it out.</p>
+						<p class="mb-0 pt-3 answer">You can also pay with cold hard cash! Just <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:sunday.bakeday.69@gmail.com?subject=I&nbsp;want&nbsp;to&nbsp;give&nbsp;you&nbsp;a&nbsp;lot&nbsp;of&nbsp;money">email me</a> and we'll figure it out.</p>
 					</div>
 				</div>
 			</div>
