--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
 				<div class="row ">
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
-							<div class="card-body fade-in">
-								<h2>Croissants</h2>
+<div class="card-body fade-in">
+		    <h2>Croissant</h2>
 								<p class="card-text">Everyone loves a croissant! Made with organic flour and really expensive butter. </p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
@@ -262,7 +262,7 @@
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
 							<div class="card-body fade-in">
-								<h2>Pains au chocolat</h2>
+								<h2>Pain au chocolat</h2>
 								<p class="card-text">What's better than a croissant? A croissant with chocolate inside it!</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
@@ -271,7 +271,7 @@
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
 							<div class="card-body fade-in">
-								<h2>Blueberry scones</h2>
+								<h2>Blueberry scone</h2>
 								<p class="card-text">Welcome to the scone zone. Made with organic flour and giant organic blueberries.</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
@@ -280,8 +280,8 @@
 					<div class="col-12 col-md-6 col-lg-3">
 						<div class="card">
 							<div class="card-body fade-in">
-								<h2>Jalapeno cheddar scones</h2>
-								<p class="card-text">Made with home-grown jalapenos and imported Scottish cheddar. Really!</p>
+								<h2>Choconut cookie</h2>
+								<p class="card-text">A huge, chewy, chocolate chip cookie with coconut flakes and pecans.</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 							</div>
 						</div>
@@ -310,7 +310,7 @@
 							<div class="col-xs-12 col-md-4 col-lg-4 mb-2">
 								<div class="pill" id="venmoPill">
 									<p class="pillTitle mb-0">
-										<a class="infoLink" aria-expanded="false" data-bs-toggle="collapse" href="#venmoCollapse" role="button" href="#">Venmo</a>
+										<a class="infoLink" aria-expanded="false" data-bs-toggle="collapse" href="#venmoCollapse" role="button">Venmo</a>
 									</p>
 									<p class="contactInfo collapse" id="venmoCollapse">
 										<a href="https://venmo.com/richard-crawford-24">@richard.crawford-24</a>
@@ -320,7 +320,7 @@
 							<div class="col-xs-12 col-md-4 col-lg-4 mb-2">
 								<div class="pill" id="cashPill">
 									<p class="pillTitle mb-0">
-										<a class="infoLink" aria-expanded="false" data-bs-toggle="collapse" href="#cashCollapse" role="button" href="#">CashApp</a>
+										<a class="infoLink" aria-expanded="false" data-bs-toggle="collapse" href="#cashCollapse" role="button">CashApp</a>
 									</p>
 									<p class="contactInfo collapse" id="cashCollapse">
 										<a href="https://cash.app/richardcrawford24">$richardcrawford24</a>
@@ -328,9 +328,9 @@
 								</div>
 							</div>
 							<div class="col-xs-12 col-md-4 col-lg-4 mb-2">
-								<div class="pill" id="venmoPill">
+								<div class="pill" id="messengerPill">
 									<p class="pillTitle mb-0">
-										<a class="infoLink" aria-expanded="false" data-bs-toggle="collapse" href="#messengerCollapse" role="button" href="#">Messenger</a>
+										<a class="infoLink" aria-expanded="false" data-bs-toggle="collapse" href="#messengerCollapse" role="button">Messenger</a>
 									</p>
 									<p class="contactInfo collapse" id="messengerCollapse">
 										<a href="http://m.me/richardcrawford24">@richardcrawford24</a>
